# electronic-docs-template

./: LICENSE.docs  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml  test-build.yml
source/: conf.py  index.rst
source/_ext/: circuitjs_support.py
source/_extra/circuitjs/circuitjs1/: 34BE10C27C953A8358ADAB184A21D5C0.cache.js  36D0E0476501C55A556F09B8149CBBF7.cache.js  83C11E8C70C2941EC713E13666BF6A01.cache.js  E8DD6960DBF1D2441A46A283AA00B133.cache.js  circuitjs1.nocache.js  compilation-mappings.txt
