[project]
name = "electronic-docs-template"
version = "0.1.0"
description = "A Sphinx documentation template specifically designed for electronic circuit documentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lzstring>=1.0.4",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinxcontrib-wavedrom>=3.0.4",
]
